add: ejemplo de proyecto completo hecho con el main + codex